fix: use some tricks to prevent ocassionally white space between clock characters

--- a/src/components/Clock/index.module.scss
+++ b/src/components/Clock/index.module.scss
@@ -8,19 +8,12 @@
   white-space: pre;
   display: inline-block;
 
-  .leaving {
-    display: none;
-    position: absolute;
-    display: inline-block;
-
-    ~ .leaving {
-      display: none !important;
-    }
+  .placeholder {
+    opacity: 0;
   }
 
-  .leaving + *,
-  .entering {
-    display: inline-block;
+  > :not(.placeholder) {
+    position: absolute;
     left: 0;
   }
 
